added AngularJS libs to index.html

--- a/crmapp/src/main/resources/static/index.html
+++ b/crmapp/src/main/resources/static/index.html
@@ -5,6 +5,8 @@
 <title>Insert title here</title>
 <link rel="stylesheet" href="/css/page.css"/>
 </head>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
 <body>
 	<span class="message">This page is protected by Spring Security!</span>
 
