new RequestMapping with 'id' for getting data only one entity

--- a/crmapp/src/main/resources/static/index.html
+++ b/crmapp/src/main/resources/static/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Main</title>
 <link rel="stylesheet" href="/css/page.css"/>
 </head>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
 <body>
-	<span class="message">This page is protected by Spring Security!</span>
+	<span class="message">This page is the main page of CRMApp!</span>
+	<p>
+	<span class="message">But it is empty right now...</span>
 
 </body>
 </html>
